wiki/content/specifications/vec/v210/classes/documentversion.md
---
title: DocumentVersion
toc: false
type: specs
date: "2024-01-08"
draft: false
specification: VEC
version: 2.1.0
documentType: "Recommendation"
elementType: Class
classes:
  - DocumentVersion
menu_name: vec-2.1.0
---
<p> A <i>DocumentVersion</i> is a unique identifier for a piece of information in a company context. The DocumentVersion is one of the three anchors for PDM information in the VEC. All technical information about a PartVersion is contained in one or more documents. The documents are containing the actual content of the VEC since all Specifications are an element of a document.      </p>

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | core |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [ItemVersion]({{< relref "itemversion.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|abbreviation| [LocalizedString]({{< relref "localizedstring.md" >}}) | 0..* | <p> Room for a short name of the Item. In case of a document the attribute is wanted to contain its title.      </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|description| [AbstractLocalizedString]({{< relref "abstractlocalizedstring.md" >}}) | 0..* | <p>Room for additional, human readable information about the ItemVersion.  e.g. Buchsengehäuse 26-polig </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|companyName| [String]({{< relref "string.md" >}}) | 1 | <p> Defines the publishing company of the ItemVersion. The companyName is part of the main identifier of an ItemVersion together with the corresponding number (partNumber or documentNumber) and version (partVersion or documentVersion).      </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|processingInstruction| [Instruction]({{< relref "instruction.md" >}}) | 0..* | <p>Processing instructions for the application of the part or the document.  </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|documentNumber| [String]({{< relref "string.md" >}}) | 1 | <p> The documentNumber is the major identifier of a DocumentVersion. The format is user defined and respectively company specific.       </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|documentType| [DocumentType]({{< relref "documenttype.md" >}}) | 0..1 | <p> The type of the document, that is defined in an <i>OpenEnumeration </i>and gives a hint about the content of the document. Values for typical types of documents in the process are predefined (e.g. a part master document for the specification of a <i>PartVersion</i>).      </p>      <p> At later point, further constraint might be attached to <i>documentType</i> defining a minimum content for certain types of documents.      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|documentVersion| [String]({{< relref "string.md" >}}) | 1 | <p>The documentVersion specifies the version index of a document (see also documentNumber).  </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|digitalRepresentationIndex| [String]({{< relref "string.md" >}}) | 0..1 | <p> An arbitrary change index that indicates if the digital representation (the content in VEC) of this <i>DocumentVersion</i> has been changed /&#160;regenerated. This can be for example an index, a timestamp or a checksum. This allows the detection of changes in the content, even when the DocumentNumber &amp;&#160;DocumentVersion is the same.      </p>      <p> For a more detailed explanation in the context see &quot;Parts&#160;&amp;&#160;Documents&quot;. KBLFRM-837.      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|creatingSystem| [String]({{< relref "string.md" >}}) | 0..1 | <p>The creatingSystem specifies the computer application or the machine which is used to create the document. </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|dataFormat| [String]({{< relref "string.md" >}}) | 0..1 | <p> The dataFormat specifies the convention that was used to structure the information in the document. This is useful if the DocumentVersion is a pointer to an external document, which is not contained in the VEC or if the content of this DocumentVersion was automatically generated by the extraction of the information out of the original document.      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|fileName| [String]({{< relref "string.md" >}}) | 0..1 | <p> The name of the file as it appears in the VEC-Package, including the folder structure (fully qualified name) that contains this <i>DocumentVersion</i>. If this DocumentVersion is a link to an external document (e.g. a ComponentSymbol), then the fileName attribute points to the file containing the original document. The usage of this attribute is only valid, if the original document is distributed along with the VEC-file in a VEC-Package. It must not point to any file location which is not part of the VEC-Package (e.g. a File on a central server file share).      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|location| [String]({{< relref "string.md" >}}) | 0..1 | <p> The location is a possibility to provide a reference to the source location of the <i>DocumentVersion</i> (e.g. a document management system or an archive system) where the original document can be found<i>.</i> The location shall be provided either as an URN&#160;or URL.      </p>      <p> &#160;      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|numberOfSheets| [Integer]({{< relref "integer.md" >}}) | 0..1 | <p>The number of sheets contained in the document.  </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|confidentialityLevel| [ConfidentialityLevel]({{< relref "confidentialitylevel.md" >}}) | 0..1 | <p> The <i>ConfidentialityLevel </i>of this <i>DocumentVersion.</i>      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|documentClassification| [DocumentClassification]({{< relref "documentclassification.md" >}}) | 0..* | <p> Defines the <i>DocumentClassifications </i>of this <i>DocumentVersion.</i>      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |

## Outgoing Relations
<table>
    <thead>
        <tr>
           <th colspan="6">Other End</th>
           <th colspan="1">This End</th>
           <th colspan="1">General</th>
        </tr>
        <tr>
           <th>Role</th>
           <th>Type</th>
           <th>Mult.</th>
           <th>Agg.{{< info agg >}}</th>
           <th>Unique{{< info unique >}}</th>
           <th>Ordered{{< info ordered >}}</th>
           <th>Mult.</th>
           <th>Description</th>
        </tr>
    <thead>
    <tbody>
    <tr>
        <td>relatedDocument</td>
        <td><a href="{{< relref "documentversion.md" >}}">DocumentVersion</a></td>
        <td>0..*</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td>0..*</td>
        <td>The association is an informative link which DocumentVersion are related to each other (e.g. by derivation, A Harness-Drawing is related to a 3D-Model).</td>
    </tr>
    <tr>
        <td>sheetOrChapter</td>
        <td><a href="{{< relref "sheetorchapter.md" >}}">SheetOrChapter</a></td>
        <td>0..*</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td>1</td>
        <td>Specifies SheetOrChapters defined in this DocumentVersion. These are especially useful if the DocumentVersion represents an external reference.</td>
    </tr>
    <tr>
        <td>specification</td>
        <td><a href="{{< relref "specification.md" >}}">Specification</a></td>
        <td>0..*</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td>0..1</td>
        <td>Specifies the Specifications contained in the DocumentVersion. All structured, technical information in the VEC is described by such Specifications.</td>
    </tr>
    <tr>
        <td>itemEquivalence</td>
        <td><a href="{{< relref "itemequivalence.md" >}}">ItemEquivalence</a></td>
        <td>0..*</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td>1</td>
        <td>Specifies ItemEquivalances defined by the DocumentVersion.</td>
    </tr>
    <tr>
        <td>referencedPart</td>
        <td><a href="{{< relref "partversion.md" >}}">PartVersion</a></td>
        <td>0..*</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td>0..*</td>
        <td>The association is an informative link which PartVersions are described by the DocumentVersion.</td>
    </tr>
    </tbody>
</table>

##  Incoming Relations
<table>
    <thead>
        <tr>
           <th colspan="5">This End</th>
           <th colspan="2">Other End</th>
           <th colspan="1">General</th>
        </tr>
        <tr>
           <th>Role</th>
           <th>Mult.</th>
           <th>Agg.{{< info agg >}}</th>
           <th>Unique{{< info unique >}}</th>
           <th>Ordered{{< info ordered >}}</th>
           <th>Type</th>
           <th>Mult.</th>
           <th>Description</th>
        </tr>
    <thead>
    <tbody>
    <tr>
        <td>documentVersion</td>
        <td>0..*</td>
        <td>Y</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "veccontent.md" >}}">VecContent</a></td>
        <td>1</td>
        <td>Specifies the DocumentVersions contained in the VEC-file.</td>
    </tr>
    <tr>
        <td>documentVersion</td>
        <td>1</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "requirementsconformancestatement.md" >}}">RequirementsConformanceStatement</a></td>
        <td></td>
        <td><p> References the <i>DocumentVersion</i> that contains the requirements to which a conformance statement shall be expressed.      </p></td>
    </tr>
    <tr>
        <td>mappedDocument</td>
        <td>1</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "externalmappingspecification.md" >}}">ExternalMappingSpecification</a></td>
        <td>0..*</td>
        <td><p> Reference to the <i>DocumentVersion</i> that represents the external data source that connected to the VEC content by the <i>ExternalMappingSpecification</i>.      </p></td>
    </tr>
    <tr>
        <td>referencedDocument</td>
        <td>1</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "documentbasedinstruction.md" >}}">DocumentBasedInstruction</a></td>
        <td>0..*</td>
        <td>References the DocumentVersion that is used as an Instruction.</td>
    </tr>
    <tr>
        <td>referencedExternalDocuments</td>
        <td>0..*</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "extendableelement.md" >}}">ExtendableElement</a></td>
        <td>0..*</td>
        <td><p> This association allows all <i>ExtendableElements</i> in the VEC&#160;to reference <i>DocumentVersions </i>as &quot;external reference&quot;.      </p>      <p> This association shall be used for the extension of elements in the VEC&#160;with information that cannot be represented in the VEC&#160;in an appropriate way but can be expressed in some external format (e.g. a specific symbol for a <i>ComponentNode</i>).      </p>      <p> D<i>ocumentVersions</i> referenced by this association shall not contain any <i>Specifications.</i>      </p>      <p> This association is no replacement for associations with a more precise semantic like the <i>DocumentBasedInstruction</i> or the associations between <i>PartVersion </i>and <i>DocumentVersion.</i>      </p>      <p> &#160;      </p></td>
    </tr>
    <tr>
        <td>relatedDocument</td>
        <td>0..*</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "documentversion.md" >}}">DocumentVersion</a></td>
        <td>0..*</td>
        <td>The association is an informative link which DocumentVersion are related to each other (e.g. by derivation, A Harness-Drawing is related to a 3D-Model).</td>
    </tr>
    <tr>
        <td>relatedDocumentVersion</td>
        <td>1</td>
        <td>N</td>
        <td>Y</td>
        <td>N</td>
        <td><a href="{{< relref "documentrelatedassignmentgroup.md" >}}">DocumentRelatedAssignmentGroup</a></td>
        <td>0..*</td>
        <td><p> References the <i>DocumentVersion</i> to which this group relates.      </p></td>
    </tr>
    </tbody>
</table>



